[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scripts/Menu.gd" type="Script" id=1]
[ext_resource path="res://Assets/StartScreen.png" type="Texture" id=2]
[ext_resource path="res://Assets/StartScreen2.png" type="Texture" id=3]
[ext_resource path="res://Assets/title.png" type="Texture" id=4]
[ext_resource path="res://Scenes/CRT Shader.tscn" type="PackedScene" id=5]

[sub_resource type="StyleBoxFlat" id=1]

[sub_resource type="StyleBoxFlat" id=2]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=4]

[sub_resource type="StyleBoxFlat" id=5]

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=7]

[sub_resource type="StyleBoxFlat" id=8]

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0, 0, 0, 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bg" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bg2" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="TextureRect" parent="."]
anchor_left = 0.194635
anchor_top = 0.0202691
anchor_right = 0.798151
anchor_bottom = 0.360269
margin_bottom = 1.52588e-05
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="New_Btn" type="Button" parent="."]
anchor_left = 0.423828
anchor_top = 0.696667
anchor_right = 0.551758
anchor_bottom = 0.75
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "New Game"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Continue_Btn" type="Button" parent="."]
visible = false
anchor_left = 0.423828
anchor_top = 0.613333
anchor_right = 0.551758
anchor_bottom = 0.666667
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "Continue"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Options_Btn" type="Button" parent="."]
anchor_left = 0.423828
anchor_top = 0.78
anchor_right = 0.551758
anchor_bottom = 0.833334
margin_top = 3.05176e-05
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
text = "Options"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Quit_Btn" type="Button" parent="."]
anchor_left = 0.423828
anchor_top = 0.863333
anchor_right = 0.551758
anchor_bottom = 0.916667
custom_styles/normal = SubResource( 10 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CRT Shader" parent="." instance=ExtResource( 5 )]
[connection signal="pressed" from="New_Btn" to="." method="_on_New_Btn_pressed"]
[connection signal="pressed" from="Continue_Btn" to="." method="_on_Continue_Btn_pressed"]
[connection signal="pressed" from="Options_Btn" to="." method="_on_Options_Btn_pressed"]
[connection signal="pressed" from="Quit_Btn" to="." method="_on_Quit_Btn_pressed"]
